Fix flex box on small devices

--- a/app/assets/stylesheets/application/about.sass
+++ b/app/assets/stylesheets/application/about.sass
@@ -5,6 +5,8 @@
     justify-content: center
   .content
     text-align: justify
+  article:last-child
+    flex-wrap: wrap-reverse
 
 #banner
   background: map-get($colors, white)
